[package]
name = "sio-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#werbolg-core = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-core"}
#werbolg-exec = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-exec"}
#werbolg-compile = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-compile"}
#werbolg-lang-lispy = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-lang-lispy"}
#werbolg-lang-common = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-lang-common"}
#sio-frontend = { path = "../sio-frontend" }
#hashbrown = "0.14"
#uchan = "0.1.4"
#bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc"]  }
#smol = { version = "^2.0.0", default-features = false }
#embassy-sync = { version = "0.6.0", features = ["log"] }
#embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-std", "executor-thread", "log", "integrated-timers"] }
#embassy-time = { version = "0.3.2", features = ["log", "std", ] }
#env_logger = "0.9.0"
#log = "0.4.14"

env_logger = "0.9.0"
log = "0.4.14"
async-channel = "2.3.1"
smol = { version = "^2.0.0", default-features = false }
hashbrown = "0.14"


