[package]
name = "sio"
version = "0.1.0"
edition = "2021"

[dependencies]
werbolg-core = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-core"}
werbolg-exec = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-exec" }
werbolg-compile = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-compile"}
#werbolg-ir-write = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-ir-write"}
werbolg-lang-common = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-lang-common"}
werbolg-lang-lispy = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-lang-lispy"}
hashbrown = "0.14"
#rand = { version = "0.8", default-features = false, features = ["alloc", "small_rng"] }
#single-assignment-store = { path = "../single-assignment-store" }
#sio-vm = { path = "../sio-vm"}
sio-frontend = { path = "../sio-frontend"}
sio-compiler = { path = "../sio-compiler"}


env_logger = "0.9.0"
log = "0.4.14"
async-channel = "2.3.1"
smol = "2.0.1"