[package]
name = "sio"
version = "0.1.0"
edition = "2021"

[dependencies]
werbolg-core = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-core"}
werbolg-lang-common = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-lang-common"}

sio-core = {path = "../sio-core"}
#env_logger = "0.9.0"
#log = "0.4.14"
smol = "2.0.1"